# rc.machine

./: .gitignore  Cargo.toml  Makefile  README.md  Settings.toml  requirements.txt  sync.sh  tail.sh
.cargo/: config
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: gamepad.rs  main.rs  state.rs  video.rs
common/: Cargo.toml
common/src/: settings.rs  types.rs
docker/: Dockerfile  Dockerfile.arm64
files/: diagram.drawio
linux-systemd/: README.md  rc.client.service  rc.server.service
server/: Cargo.toml  cat-hunter.service
server/src/: main.rs
src/: config.py
src/client/: Cargo.toml  app.py  camera.py  controls.py  inputs.py  main.rs  settings.rs
src/client/src/: conn.rs  main.rs  state.rs  utils.rs  video.rs  views.rs  window.rs
src/client/src/views/: base.rs  main.rs  mod.rs  start.rs
src/common/: Cargo.toml  types.py  utils.py
src/common/src/: conn.rs  lib.rs  messages.rs  settings.rs  types.rs
src/server/: Cargo.toml  app.py
src/server/src/: camera.rs  conn.rs  machine.rs  main.rs  utils.rs
