[package]
name = "client"
version = "0.1.0"
authors = ["Serhii Babak <mermoldy@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
web-view = "*"
hidapi = "1.0.1"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "*"
log = "0.4.0"
env_logger = "0.7.1"
piston = "*"
piston_window = "*"
gilrs = "0.7.2"
gfx_device_gl = "*"
piston2d-gfx_graphics = "*"
image = "*"
piston-texture = "*"
gfx = "*"