[package]
name = "client"
version = "0.1.0"
authors = ["Serhii Babak <mermoldy@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
hidapi = "1.0.1"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
log = "0.4.0"
env_logger = "0.7.1"
piston = "0.49.0"
piston_window = "0.105.0"
gilrs = "0.7.2"
image = "0.22.3"
twoway = "0.2.1"
