[package]
name = "server"
version = "0.1.0"
authors = ["Serhii Babak <mermoldy@gmail.com>"]

[dependencies]
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "*"
common = { path = "../common" }
log = "0.4.0"
sysfs_gpio = "0.5"
log4rs = "0.9.0"
signal-hook = "0.1.12"
log-panics = "2.0.0"
rscam = { version = "0.5.5", features = ["no_wrapper"] }
