[package]
name = "client"
version = "0.1.0"
authors = ["Serhii Babak <mermoldy@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
config = "0.9"
serde = { version = "1.0.111", features = ["derive"] }
bincode = "1.2.0"
log = "0.4.0"
env_logger = "0.7.1"
gilrs = "0.7.4"
image = "0.23.4"
twoway = "0.2.1"
find_folder = "*"
toml = "0.5"
druid = { version = "0.6", features=["image",  "im", "svg"]}
druid-shell = "0.6"
druid-material-icons = { git = "https://github.com/derekdreery/druid-material-icons" }
simple-error = "0.2.1"
stoppable_thread = "0.2.1"